--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,9 +5,9 @@ name: i200635
 
 on:
   push:
-    branches: [ "i200635" ]
+    branches: [ "i200635","20i-0864" ]
   pull_request:
-    branches: [ "i200635" ]
+    branches: [ "i200635","20i-0864" ]
 
 permissions:
   contents: read
@@ -23,13 +23,13 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-    - name: Install dependencies
+    - name: Install 
       run: |
        
        pip install -r requirements.txt
-    - name: Lint with flake8
+    - name: Lint 
       run: |
          make lint
-    - name: Test with pytest
+    - name: Test 
       run: |
          make test
