--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,13 +1,13 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: i200635
+name: Muhammad Abdullah Cheema
 
 on:
   push:
-    branches: [ "i200635" ]
+    branches: [ "i200468" ]
   pull_request:
-    branches: [ "i200635" ]
+    branches: [ "i200468" ]
 
 permissions:
   contents: read
