--- a/.github/workflows/hammad.yml
+++ b/.github/workflows/hammad.yml
@@ -1,4 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# This workflow will install Python dependencies, run tests, and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
 name: Hammad Habib
@@ -18,9 +18,9 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v2
       with:
         python-version: "3.10"
     - name: Install dependencies
@@ -31,7 +31,6 @@ jobs:
     - name: Lint with flake8
       run: |
         make lint
-       
     - name: Test with pytest
       run: |
         make test
