--- a/.github/workflows/hammad.yml
+++ b/.github/workflows/hammad.yml
@@ -1,8 +1,4 @@
-# This workflow will install Python dependencies, run tests, and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Hammad Habib
-
 on:
   push:
     branches: [ "i200864" ]
@@ -11,24 +7,22 @@ on:
 
 permissions:
   contents: read
-
 jobs:
   build:
-
-    runs-on: windows-latest
-
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python 3.10
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v3
       with:
         python-version: "3.10"
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
+        pip install -r requirements.txt
+    - name: Lint
       run: |
         make lint
     - name: Test with pytest
