--- a/.github/workflows/pythonApp.yml
+++ b/.github/workflows/pythonApp.yml
@@ -1,9 +1,9 @@
 name: main
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "i200468" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "i200468" ]
 
 permissions:
   contents: read
